--- a/css/css/styles.css
+++ b/css/css/styles.css
@@ -70,7 +70,15 @@ header {
   background: #f5f4fa;
   border-radius: 4px;
 }
-
+.mainButton:hover,
+.mainButton:focus {
+  color: #ffffff;
+}
+/*.mainButton {
+  transition-property: background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}*/
 .mainButton {
   border: transparent;
   cursor: pointer;
@@ -111,7 +119,9 @@ header {
 .icons-contakts:hover {
   fill: #2196f3;
 }
-
+.contaktsLinks {
+  color: #2196f3;
+}
 .mainList {
   display: flex;
   align-items: center;
@@ -127,6 +137,7 @@ header {
   flex-wrap: wrap;
   margin-left: -30px;
   margin-top: -30px;
+  overflow: hidden;
 }
 .card-set > .item {
   flex-basis: calc(100% / 3 - 30px);
@@ -134,41 +145,25 @@ header {
   margin-top: 30px;
   border: 1px solid #eeeeee;
 }
-.item:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 .item {
   position: relative;
-}
-.item-card-set::before {
-  display: inline-block;
-  position: absolute;
-  width: 322px;
-  height: 168px;
-  top: 0;
-  bottom: 0;
-  content: "";
-}
-.item-card-set {
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 28px;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-  border: none;
 }
 .item::before {
   display: inline-block;
   position: absolute;
+  content: "Технокряк - это современная площадка распространения коронавируса. Компании исподльзуют эту платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.";
   width: 370px;
   height: 294px;
-  background: rgba(33, 150, 243, 0.9);
   top: 0;
-  bottom: 0;
-  content: "";
-
+  left: 0;
+  background: rgba(33, 150, 243, 0.9);
   opacity: 0;
+
+  transform: translateY(100%);
+  transition: transform 250ms, cubic-bezier(0.4, 0, 0.2, 1);
+}
+.card-set:hover .item::before {
+  transform: translateY(0);
 }
 .item:hover::before {
   opacity: 1;
@@ -205,37 +200,43 @@ img {
 .images {
   display: flex;
   justify-content: space-between;
-  position: relative;
+}
+.product-imeges {
 }
 .product-thumb::before {
   display: inline-block;
-  position: absolute;
+  content: "ДЕСКТОПНЫЕ ПРИЛОЖЕНИЯ";
   width: 370px;
   height: 70px;
-  top: 0;
-  bottom: 0;
   background-color: rgba(47, 48, 58, 0.8);
-  content: "Десктопные приложения";
-  outline: 3px solid red;
-}
-.product-thumb::before content {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 16px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #ffffff;
+
+  position: absolute;
 }
 .navList-link {
   font-weight: 500;
   line-height: 1.142em;
   letter-spacing: 0.02em;
   color: #212121;
+  position: relative;
 }
 .navList-link:focus,
 .navList-link:hover {
   color: #2196f3;
+}
+.navList-link::after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 48px;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+
+  opacity: 0;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.navList-link:hover::after {
+  opacity: 1;
 }
 .courant {
   color: #2196f3;
@@ -262,6 +263,7 @@ img {
   border-radius: 4px;
   width: 170px;
   height: 92px;
+
   display: flex;
   justify-content: center;
   align-items: center;
@@ -271,15 +273,11 @@ img {
   margin: 0px;
   fill: #afb1b8;
 }
-.button-icon-clients:focus,
 .button-icon-clients:hover {
   fill: #2196f3;
 }
 .box:hover {
   border: 1px solid #2196f3;
-}
-.box:hover .button-icon-clients {
-  fill: #2196f3;
 }
 .contaktsLinks {
   font-weight: 500;
@@ -288,18 +286,10 @@ img {
   line-height: 16px;
 
   color: #757575;
-  display: flex;
-  align-items: center;
 }
 .contaktsLinks:focus,
 .contaktsLinks:hover {
   color: #2196f3;
-}
-.contaktsLinks:focus .icons-contakts {
-  fill: #2196f3;
-}
-.contaktsLinks:hover .icons-contakts {
-  fill: #2196f3;
 }
 .text {
   margin-right: auto;
@@ -324,33 +314,7 @@ img {
 .teamSection {
   background: #f5f4fa;
 }
-.actions {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  justify-content: center;
-  background: white;
-}
-.actions-button-icon:not(:last-child) {
-  margin-right: 10px;
-}
-.button-actions {
-  display: flex;
-  border: none;
-  padding: 12px;
-  border-radius: 50% 50%;
-}
-.button-icon {
-  fill: #afb1b8;
-}
-.button-actions:focus,
-.button-actions:hover {
-  background-color: #2196f3;
-}
-.button-actions:hover .button-icon {
-  fill: #ffffff;
-}
+
 /* work_ title*/
 
 .work_title {
@@ -368,7 +332,7 @@ img {
 }
 .divteamCard {
   padding-top: 20px;
-  padding-bottom: 30px;
+  padding-bottom: 20px;
   background: white;
 }
 .team {
@@ -385,12 +349,45 @@ img {
   line-height: 1.187em;
   letter-spacing: 0.03em;
   text-align: center;
-  margin-bottom: 16px;
 }
 .teamlidcard {
   display: flex;
   justify-content: space-between;
   padding-bottom: 94px;
+}
+
+/* actions*/
+.actions {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  background: #ffffff;
+  justify-content: center;
+  padding: 0;
+  border: 0;
+}
+.actions-button-icon {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  border-radius: 50% 50%;
+  background-color: #ffffff;
+  margin-bottom: 30px;
+  justify-content: center;
+  align-items: center;
+}
+.button-icon {
+  fill: #afb1b8;
+}
+.actions-button-icon:not(:last-child) {
+  margin-right: 10px;
+}
+.button-actions:hover {
+  fill: #ffffff;
+}
+.actions-button-icon:hover {
+  background: #2196f3;
 }
 .cardItem {
   padding-top: 20px;
@@ -418,9 +415,6 @@ img {
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
-.listMenu:hover {
-  color: #ffffff;
-}
 .listMenu {
   font-weight: 500;
   font-size: 16px;
@@ -440,12 +434,13 @@ img {
   padding-top: 60px;
   padding-bottom: 60px;
   max-width: 1600px;
-  display: flex;
   align-items: center;
   justify-items: center;
 }
 .containerLogo {
   display: inline-block;
+}
+.containerLogo {
   margin-right: 70px;
 }
 .containerJoin {
@@ -465,8 +460,6 @@ img {
   padding: 0;
   margin: 0;
   list-style: none;
-
-  display: flex;
 }
 .button-icon-join {
   border: none;
@@ -475,11 +468,11 @@ img {
   border-radius: 50% 50%;
   background: rgba(255, 255, 255, 0.1);
 }
-.join-block {
-  display: inline-block;
-}
 .join-block:not(:last-child) {
   margin-right: 10px;
+}
+.join-block {
+  display: inline-block;
 }
 .button-icon-join:hover {
   background: #2196f3;
@@ -488,10 +481,6 @@ img {
   fill: white;
 }
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
-}
 .logo {
   font-weight: bold;
   font-size: 26px;
@@ -525,31 +514,4 @@ img {
 }
 .contaktsOne {
   margin-top: 20px;
-}
-/*Модальное окно*/
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.2);
-}
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-.modal {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-
-  width: 528px;
-  height: 581px;
-
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
 }
