--- a/css/styles.css
+++ b/css/styles.css
@@ -81,10 +81,15 @@ header {
   font-size: 16px;
   line-height: 1.875em;
   color: #ffffff;
+
   padding-left: 32px;
   padding-right: 32px;
   padding-top: 10px;
   padding-bottom: 10px;
+
+  transition-property: background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .siteNav {
   display: flex;
@@ -107,20 +112,35 @@ header {
 .icons-contakts {
   margin-right: 10px;
   fill: #757575;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icons-contakts:hover {
   fill: #2196f3;
 }
+.a-item:hover .div-card-set {
+  transform: translateY(0);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.div-item-img {
+  position: relative;
+  overflow: hidden;
+}
+.div-card-set {
+  position: absolute;
+  background: rgba(33, 150, 243, 0.9);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
 
-.mainList {
-  display: flex;
-  align-items: center;
-}
-.mainList li {
-  margin-right: 50px;
-}
-.mainList .mainListContakts:last-child {
-  margin-right: 0;
+  transition-property: background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-set {
   display: flex;
@@ -132,23 +152,9 @@ header {
   flex-basis: calc(100% / 3 - 30px);
   margin-left: 30px;
   margin-top: 30px;
+  background: #ffffff;
   border: 1px solid #eeeeee;
-}
-.item:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.item {
-  position: relative;
-}
-.item-card-set::before {
-  display: inline-block;
-  position: absolute;
-  width: 322px;
-  height: 168px;
-  top: 0;
-  bottom: 0;
-  content: "";
+  box-sizing: border-box;
 }
 .item-card-set {
   font-weight: normal;
@@ -158,21 +164,17 @@ header {
   color: #ffffff;
   border: none;
 }
-.item::before {
-  display: inline-block;
-  position: absolute;
-  width: 370px;
-  height: 294px;
-  background: rgba(33, 150, 243, 0.9);
-  top: 0;
-  bottom: 0;
-  content: "";
+.mainList {
+  display: flex;
+  align-items: center;
+}
+.mainList li {
+  margin-right: 50px;
+}
+.mainList .mainListContakts:last-child {
+  margin-right: 0;
+}
 
-  opacity: 0;
-}
-.item:hover::before {
-  opacity: 1;
-}
 img {
   display: block;
   max-width: 100%;
@@ -185,18 +187,26 @@ img {
   list-style: none;
   display: flex;
   justify-content: center;
+  background: #f3f4fa;
+  border-radius: 4px;
+  margin-bottom: 30px;
 }
 .titleClassSection {
   width: 270px;
-  height: 120px;
-  background: #f3f4fa;
-  border-radius: 4px;
 }
 .titleClass {
   display: flex;
 }
 .titleClassSection:not(:last-child) {
   margin-right: 30px;
+}
+.titleClassSection p {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+
+  color: #757575;
 }
 .titleList,
 .title {
@@ -205,20 +215,22 @@ img {
 .images {
   display: flex;
   justify-content: space-between;
+}
+.product-thumb {
   position: relative;
 }
-.product-thumb::before {
-  display: inline-block;
+.lettering {
   position: absolute;
-  width: 370px;
-  height: 70px;
-  top: 0;
-  bottom: 0;
   background-color: rgba(47, 48, 58, 0.8);
-  content: "Десктопные приложения";
-  outline: 3px solid red;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  text-align: center;
 }
-.product-thumb::before content {
+.lettering p {
   font-weight: bold;
   font-size: 14px;
   line-height: 16px;
@@ -232,6 +244,10 @@ img {
   line-height: 1.142em;
   letter-spacing: 0.02em;
   color: #212121;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navList-link:focus,
 .navList-link:hover {
@@ -270,6 +286,10 @@ img {
   padding: 0px;
   margin: 0px;
   fill: #afb1b8;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-icon-clients:focus,
 .button-icon-clients:hover {
@@ -290,6 +310,10 @@ img {
   color: #757575;
   display: flex;
   align-items: center;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contaktsLinks:focus,
 .contaktsLinks:hover {
@@ -343,6 +367,10 @@ img {
 }
 .button-icon {
   fill: #afb1b8;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-actions:focus,
 .button-actions:hover {
@@ -427,13 +455,18 @@ img {
   line-height: 1.625em;
   letter-spacing: 0.03em;
   color: #212121;
+
   padding-top: 6px;
   padding-bottom: 6px;
   padding-left: 22px;
   padding-right: 22px;
-  border: 1px solid #f5f4fa;
+  border: transparent;
   background: #f5f4fa;
   border-radius: 4px;
+
+  transition-property: background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .colorOne {
   background: #2f303a;
@@ -474,6 +507,10 @@ img {
   height: 44px;
   border-radius: 50% 50%;
   background: rgba(255, 255, 255, 0.1);
+
+  transition-property: background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .join-block {
   display: inline-block;
@@ -520,8 +557,11 @@ img {
 }
 .contakts {
   line-height: 1.714em;
-  color: #ffffff;
   color: rgba(255, 255, 255, 0.6);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contaktsOne {
   margin-top: 20px;
