--- a/css/styles.css
+++ b/css/styles.css
@@ -87,9 +87,7 @@ header {
   padding-top: 10px;
   padding-bottom: 10px;
 
-  transition-property: background;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .siteNav {
   display: flex;
@@ -113,9 +111,7 @@ header {
   margin-right: 10px;
   fill: #757575;
 
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icons-contakts:hover {
   fill: #2196f3;
@@ -138,9 +134,7 @@ header {
   height: 100%;
   transform: translateY(100%);
 
-  transition-property: background;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-set {
   display: flex;
@@ -244,14 +238,27 @@ img {
   line-height: 1.142em;
   letter-spacing: 0.02em;
   color: #212121;
+  padding-bottom: 28px;
+  position: relative;
 
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .navList-link:focus,
 .navList-link:hover {
   color: #2196f3;
+}
+.navList-link::after {
+  content: "";
+
+  position: absolute;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  bottom: 0;
+  left: 0;
+  background: #2196f3;
+  border-radius: 2px;
 }
 .courant {
   color: #2196f3;
@@ -287,9 +294,7 @@ img {
   margin: 0px;
   fill: #afb1b8;
 
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-icon-clients:focus,
 .button-icon-clients:hover {
@@ -311,9 +316,7 @@ img {
   display: flex;
   align-items: center;
 
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contaktsLinks:focus,
 .contaktsLinks:hover {
@@ -368,9 +371,7 @@ img {
 .button-icon {
   fill: #afb1b8;
 
-  transition-property: fill;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-actions:focus,
 .button-actions:hover {
@@ -464,9 +465,7 @@ img {
   background: #f5f4fa;
   border-radius: 4px;
 
-  transition-property: background;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .colorOne {
   background: #2f303a;
@@ -508,9 +507,7 @@ img {
   border-radius: 50% 50%;
   background: rgba(255, 255, 255, 0.1);
 
-  transition-property: background;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .join-block {
   display: inline-block;
@@ -559,9 +556,7 @@ img {
   line-height: 1.714em;
   color: rgba(255, 255, 255, 0.6);
 
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contaktsOne {
   margin-top: 20px;
