--- a/css/styles.css
+++ b/css/styles.css
@@ -116,10 +116,18 @@ header {
 .icons-contakts:hover {
   fill: #2196f3;
 }
-.a-item:hover .div-card-set {
-  transform: translateY(0);
+.item-a {
+  display: block;
+}
+.item-a:focus,
+.item-a:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.item-a:hover .div-card-set {
+  transform: translateY(0);
+  /*box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);*/
 }
 .div-item-img {
   position: relative;
@@ -134,7 +142,7 @@ header {
   height: 100%;
   transform: translateY(100%);
 
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-set {
   display: flex;
@@ -353,20 +361,17 @@ img {
 }
 .actions {
   display: flex;
-  padding: 0;
-  margin: 0;
-  list-style: none;
   justify-content: center;
-  background: white;
 }
 .actions-button-icon:not(:last-child) {
   margin-right: 10px;
 }
 .button-actions {
   display: flex;
-  border: none;
   padding: 12px;
-  border-radius: 50% 50%;
+  border-radius: 50%;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-icon {
   fill: #afb1b8;
@@ -377,6 +382,11 @@ img {
 .button-actions:hover {
   background-color: #2196f3;
 }
+.button-actions:focus,
+.button-actions:hover {
+  fill: #ffffff;
+}
+
 .button-actions:hover .button-icon {
   fill: #ffffff;
 }
