--- a/css/styles.css
+++ b/css/styles.css
@@ -126,8 +126,8 @@ header {
 }
 .item-a:hover .div-card-set {
   transform: translateY(0);
-  /*box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);*/
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .div-item-img {
   position: relative;
@@ -165,6 +165,8 @@ header {
   letter-spacing: 0.03em;
   color: #ffffff;
   border: none;
+
+  padding: 63px 24px;
 }
 .mainList {
   display: flex;
@@ -579,10 +581,9 @@ img {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
-}
-.backdrop.is-hidden {
-  opacity: 0;
-  pointer-events: none;
+
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   position: absolute;
@@ -597,4 +598,23 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+/*.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}*/
+.close {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  border: 3px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  border-radius: 50%;
+
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close:focus,
+.close:hover {
+  color: #000000;
 }
