--- a/css/styles.css
+++ b/css/styles.css
@@ -248,7 +248,7 @@ img {
   line-height: 1.142em;
   letter-spacing: 0.02em;
   color: #212121;
-  padding-bottom: 28px;
+  padding-bottom: 31px;
   position: relative;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -257,7 +257,7 @@ img {
 .navList-link:hover {
   color: #2196f3;
 }
-.navList-link::after {
+.navList-link.courant::after {
   content: "";
 
   position: absolute;
@@ -600,14 +600,16 @@ img {
   border-radius: 4px;
 }
 
-/*.backdrop.is-hidden {
+.backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
-}*/
+}
 .close {
   position: absolute;
   width: 30px;
   height: 30px;
+  right: 8px;
+  top: 8px;
   border: 3px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
   border-radius: 50%;
